refactor and clean up

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Bulma!</title>
+  <title>Kollegium - Edit Stein Schule Aichach</title>
 </head>
 
 <body class="has-navbar-fixed-top">
